[HOPSWORKS-1642] Upgrade to TensorFlow 2.2.0 and PyTorch 1.5.1 (#140)

--- a/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_mnist_example.ipynb
+++ b/notebooks/ml/Distributed_Training/mirrored_strategy/mirroredstrategy_mnist_example.ipynb
@@ -4,10 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Benchmark GPU vs CPU & multi-host vs single host\n",
+    "# MultiWorkerMirroredStrategy on Hopsworks\n",
     "---\n",
-    "\n",
-    "This notebook can be used to benchmark performance using CPU, a single GPU or many GPUs.\n",
     "\n",
     "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>\n",
     "\n",
@@ -16,7 +14,7 @@
     "</a></h1> \n",
     "</p>\n",
     "\n",
-    "![hops.png](../../../images/hops.png)\n",
+    "![hops.png](../../images/hops.png)\n",
     "\n",
     "## The `hops` python module\n",
     "\n",
@@ -77,82 +75,12 @@
     "As demonstrated in the gif it provides general information about the experiment and the resulting metric. Experiments can be visualized meanwhile or after training in a TensorBoard.\n",
     "<br>\n",
     "<br>\n",
-    "![Image7-Monitor.png](../../../images/experiments.gif)"
+    "![Image7-Monitor.png](../../images/experiments.gif)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def wrapper():\n",
-    "    import tensorflow as tf\n",
-    "    \n",
-    "    # Wrapper for keras_applications, you can import any model you want to try (like ResNet50)\n",
-    "    from tensorflow.keras.applications import ResNet50\n",
-    "\n",
-    "    import numpy as np\n",
-    "    \n",
-    "    from hops import tensorboard\n",
-    "    \n",
-    "    # Utility module for getting number of GPUs accessible by the container (Spark Executor)\n",
-    "    from hops import devices\n",
-    "\n",
-    "    batch_size = 8 # Number of samples to process on each GPU every iteration\n",
-    "    \n",
-    "    # Image dimensions\n",
-    "    height = 224\n",
-    "    width = 224\n",
-    "    channels = 3\n",
-    "    num_classes = 1000\n",
-    "    \n",
-    "    num_iterations = 5000 # Number of iterations, increase to run longer\n",
-    "    \n",
-    "\n",
-    "    log_dir = tensorboard.logdir()\n",
-    "    \n",
-    "    # Read synthetic data (can be replaced with real data)\n",
-    "    def input_fn():\n",
-    "      data = np.random.random((batch_size, height, width, channels)).astype(np.float32)\n",
-    "      labels = np.random.random((batch_size, num_classes))\n",
-    "      dataset = tf.data.Dataset.from_tensor_slices((data, labels))\n",
-    "      dataset = dataset.repeat(num_iterations)\n",
-    "      dataset = dataset.batch(batch_size)\n",
-    "      return dataset    \n",
-    "    \n",
-    "    tf.keras.backend.set_learning_phase(True)\n",
-    "\n",
-    "    \n",
-    "    # Define distribution strategy\n",
-    "    strategy = tf.distribute.MirroredStrategy()\n",
-    "\n",
-    "\n",
-    "    with strategy.scope():\n",
-    "        model = ResNet50(weights=None, input_shape=(height, width, channels), classes=num_classes)\n",
-    "\n",
-    "        optimizer = tf.keras.optimizers.RMSprop(0.2)\n",
-    "        model.compile(loss='categorical_crossentropy', optimizer=optimizer)\n",
-    "\n",
-    "\n",
-    "    callbacks = [\n",
-    "        tf.keras.callbacks.TensorBoard(log_dir=log_dir),\n",
-    "        tf.keras.callbacks.ModelCheckpoint(filepath=log_dir),\n",
-    "    ]\n",
-    "    model.fit(input_fn(), \n",
-    "        verbose=0,\n",
-    "        epochs=3, \n",
-    "        steps_per_epoch=5,\n",
-    "        validation_data=input_fn(),\n",
-    "        callbacks=callbacks\n",
-    "    )\n",
-    "    model.evaluate(input_fn())\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -161,13 +89,134 @@
      "text": [
       "Finished Experiment \n",
       "\n",
-      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0163_3', {'metric': None, 'log': 'Experiments/application_1594231828166_0163_3/output.log'})"
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/demo/Experiments/application_1594231828166_0177_4', {'accuracy': 0.828125, 'log': 'Experiments/application_1594231828166_0177_4/chief_0_output.log'})"
      ]
     }
    ],
    "source": [
+    "def mirrored_training():\n",
+    "\n",
+    "    import sys\n",
+    "    \n",
+    "    import numpy as np\n",
+    "    import tensorflow as tf\n",
+    "    \n",
+    "    from hops import tensorboard\n",
+    "    from hops import devices\n",
+    "    from hops import hdfs\n",
+    "    \n",
+    "    import pydoop.hdfs as pydoop\n",
+    "    \n",
+    "    log_dir = tensorboard.logdir()\n",
+    "    \n",
+    "    # Define distribution strategy\n",
+    "    strategy = tf.distribute.MirroredStrategy()\n",
+    "\n",
+    "    # Define per device batch size\n",
+    "    batch_size_per_replica = 32\n",
+    "    \n",
+    "    # Define global batch size\n",
+    "    batch_size = batch_size_per_replica * strategy.num_replicas_in_sync\n",
+    "        \n",
+    "    # Define model hyper parameters\n",
+    "    epochs = 10\n",
+    "    steps_per_epoch = 5\n",
+    "    validation_steps = 2\n",
+    "    \n",
+    "    kernel = 2\n",
+    "    pool = 2\n",
+    "    dropout = 0.01\n",
+    "\n",
+    "    num_classes = 10\n",
+    "    \n",
+    "    # Input image dimensions\n",
+    "    img_rows, img_cols = 28, 28\n",
+    "    input_shape = (28, 28, 1)\n",
+    "    \n",
+    "    \n",
+    "    train_filenames = [hdfs.project_path() + \"TourData/mnist/train/train.tfrecords\"]\n",
+    "    validation_filenames = [hdfs.project_path() + \"TourData/mnist/validation/validation.tfrecords\"]\n",
+    "    \n",
+    "    # Create an iterator over the dataset\n",
+    "    def data_input(filenames, batch_size=128, shuffle=False, repeat=None):\n",
+    "\n",
+    "        def parser(serialized_example):\n",
+    "            \"\"\"Parses a single tf.Example into image and label tensors.\"\"\"\n",
+    "            features = tf.io.parse_single_example(\n",
+    "                serialized_example,\n",
+    "                features={\n",
+    "                    'image_raw': tf.io.FixedLenFeature([], tf.string),\n",
+    "                    'label': tf.io.FixedLenFeature([], tf.int64),\n",
+    "                })\n",
+    "            image = tf.io.decode_raw(features['image_raw'], tf.uint8)\n",
+    "            image.set_shape([28 * 28])\n",
+    "\n",
+    "            # Normalize the values of the image from the range [0, 255] to [-0.5, 0.5]\n",
+    "            image = tf.cast(image, tf.float32) / 255 - 0.5\n",
+    "            label = tf.cast(features['label'], tf.int32)\n",
+    "            # Reshape the tensor\n",
+    "            image = tf.reshape(image, [img_rows, img_cols, 1])\n",
+    "    \n",
+    "            # Create a one hot array for your labels\n",
+    "            label = tf.one_hot(label, num_classes)\n",
+    "            \n",
+    "            return image, label\n",
+    "\n",
+    "        # Import MNIST data\n",
+    "        dataset = tf.data.TFRecordDataset(filenames)\n",
+    "\n",
+    "        # Map the parser over dataset, and batch results by up to batch_size\n",
+    "        dataset = dataset.map(parser)\n",
+    "        if shuffle:\n",
+    "            dataset = dataset.shuffle(buffer_size=128)\n",
+    "        dataset = dataset.batch(batch_size, drop_remainder=True)\n",
+    "        dataset = dataset.repeat(repeat)\n",
+    "        return dataset\n",
+    "    \n",
+    "    # construct model under distribution strategy scope\n",
+    "    with strategy.scope():\n",
+    "        \n",
+    "        model = tf.keras.Sequential()\n",
+    "        model.add(tf.keras.layers.Conv2D(32, kernel_size=(kernel, kernel),\n",
+    "                         activation='relu',\n",
+    "                         input_shape=input_shape))\n",
+    "        model.add(tf.keras.layers.Conv2D(64, (kernel, kernel), activation='relu'))\n",
+    "        model.add(tf.keras.layers.MaxPooling2D(pool_size=(pool, pool)))\n",
+    "        model.add(tf.keras.layers.Dropout(dropout))\n",
+    "        model.add(tf.keras.layers.Flatten())\n",
+    "        model.add(tf.keras.layers.Dense(128, activation='relu'))\n",
+    "        model.add(tf.keras.layers.Dropout(dropout))\n",
+    "        model.add(tf.keras.layers.Dense(num_classes, activation='softmax'))\n",
+    "\n",
+    "        opt = tf.keras.optimizers.Adadelta(1.0)\n",
+    "\n",
+    "        model.compile(loss=tf.keras.losses.categorical_crossentropy,\n",
+    "                      optimizer=opt,\n",
+    "                      metrics=['accuracy'])\n",
+    "        \n",
+    "        \n",
+    "    callbacks = [\n",
+    "        tf.keras.callbacks.TensorBoard(log_dir=log_dir),\n",
+    "        tf.keras.callbacks.ModelCheckpoint(filepath=log_dir),\n",
+    "    ]\n",
+    "    \n",
+    "    model.fit(data_input(train_filenames, batch_size), \n",
+    "        verbose=0, \n",
+    "        epochs=epochs, \n",
+    "        steps_per_epoch=steps_per_epoch,\n",
+    "        validation_data=data_input(validation_filenames, batch_size),\n",
+    "        validation_steps=validation_steps,      \n",
+    "        callbacks=callbacks\n",
+    "    )\n",
+    "    \n",
+    "    score = model.evaluate(data_input(validation_filenames, batch_size), steps=1)\n",
+    "    metrics = {'accuracy': score[1]}\n",
+    "\n",
+    "    return metrics    \n",
+    "\n",
+    "    \n",
     "from hops import experiment\n",
-    "experiment.launch(wrapper, local_logdir=True)"
+    "experiment.mirrored(mirrored_training,  name='mnist model', local_logdir=True, metric_key='accuracy')"
    ]
   },
   {
