--- a/notebooks/ml/Parallel_Experiments/TensorFlow/evolutionary_search/evolutionary_search_mnist.ipynb
+++ b/notebooks/ml/Parallel_Experiments/TensorFlow/evolutionary_search/evolutionary_search_mnist.ipynb
@@ -4,16 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Getting started: Fashion Mnist on Hops Notebook\n",
+    "## Tensorflow 2 Keras example with differential evolution on Hopsworks\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "<font color='red'> <h3>Tested with TensorFlow 2.2.0</h3></font>\n",
+    "\n",
     "<p>\n",
     "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
     "</a></h1> \n",
@@ -84,28 +79,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Training Fashion Mnist on Hops <a class=\"anchor\" id='cifar10'></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### The wrapper function\n",
-    "\n",
-    "Here we define the aforementioned wrapper function containing the code to run, with the hyperparameter arguments `learning_rate` and `dropout`. It simply contains all the TensorFlow code that we want to run."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def wrapper(learning_rate, dropout):\n",
+    "def tf2_keras_differential_evolution(kernel, pool, dropout):\n",
     "\n",
     "    import sys\n",
     "    \n",
@@ -133,8 +112,6 @@
     "    shuffle_size = batch_size * 4\n",
     "    \n",
     "    num_classes = 10\n",
-    "    kernel = 3\n",
-    "    pool = 2\n",
     "    \n",
     "    # Input image dimensions\n",
     "    img_rows, img_cols = 28, 28\n",
@@ -176,9 +153,6 @@
     "      # Map the parser over dataset, and batch results by up to batch_size\n",
     "      dataset = dataset.map(_parser, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
     "        \n",
-    "#      dataset = dataset.map(\n",
-    "#        _normalize_img, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
-    "\n",
     "        \n",
     "      dataset = dataset.map(\n",
     "        _reshape_img, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
@@ -189,7 +163,6 @@
     "      dataset = dataset.batch(batch_size)   \n",
     "  \n",
     "      dataset = dataset.prefetch(tf.data.experimental.AUTOTUNE)\n",
-    "  #    dataset = strategy.experimental_distribute_dataset(dataset)         \n",
     "\n",
     "      return dataset\n",
     "    \n",
@@ -211,7 +184,7 @@
     "\n",
     "    model.compile(\n",
     "        loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
-    "        optimizer=tf.keras.optimizers.Adam(learning_rate),\n",
+    "        optimizer=tf.keras.optimizers.Adam(0.001),\n",
     "        metrics=['accuracy'],\n",
     "    )\n",
     "\n",
@@ -232,60 +205,38 @@
     "    score = model.evaluate(input_fn(validation_filenames, batch_size), steps=1, verbose=0)\n",
     "    print('Test loss:', score[0])\n",
     "    print('Test accuracy:', score[1])\n",
-    "    return {'accuracy': score[1], 'loss': score[0]}        "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Hyperparameter search <a class=\"anchor\" id='hyperparam'></a>\n",
-    "\n",
-    "Hyperparameter optimization is critical to achieve the best accuracy for your model. With Hops, hyperparameter optimization is easier than ever.  We can find the best hyperparameters to train the model and make it easy to find the best set of hyper parameters by visualizing them in TensorBoard for you.\n",
-    "\n",
-    "To define the hyperparameters you wish to perform gridsearch with, simply create a dictionary with the keys matching the arguments of your wrapper function, and a list of values for each parameter like below.\n",
-    "\n",
-    "```python\n",
-    "# Arguments to use in training\n",
-    "args_dict = {'learning_rate': [0.001, 0.0005, 0.0001], 'dropout': [0.45, 0.7]}\n",
-    "```\n",
-    "\n",
-    "So in effect, this is interpreted as that you want to run your TensorFlow code with 6 different hyperparameter combinations as shown in the table.\n",
-    "\n",
-    "\n",
-    "| Job number | Learning rate | Dropout |\n",
-    "|:----------:|:-------------:|:-------:|\n",
-    "|      1     |     0.001     |   0.45  |\n",
-    "|      2     |     0.001     |   0.7   |\n",
-    "|      3     |     0.0005    |   0.45  |\n",
-    "|      4     |     0.0005    |   0.7   |\n",
-    "|      5     |     0.0001    |   0.45  |\n",
-    "|      6     |     0.0001    |   0.7   |"
+    "    return {'accuracy': score[1], 'loss': score[0]}    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "#Define dict for hyperparameters\n",
-    "args_dict = {'learning_rate': [0.001, 0.0005, 0.0001], 'dropout': [0.45, 0.7]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 1 || average metric: 0.16666666666666666, best metric: 0.25, best parameter combination: ['kernel=3', 'pool=8', 'dropout=0.847924365583017']\n",
+      "\n",
+      "Generation 2 || average metric: 0.20833333333333334, best metric: 0.25, best parameter combination: ['kernel=2', 'pool=4', 'dropout=0.4520528793170524']\n",
+      "\n",
+      "Generation 3 || average metric: 0.22395833333333334, best metric: 0.34375, best parameter combination: ['kernel=2', 'pool=4', 'dropout=0.6836312810240766']\n",
+      "\n",
+      "Generation 4 || average metric: 0.22395833333333334, best metric: 0.34375, best parameter combination: ['kernel=2', 'pool=4', 'dropout=0.6836312810240766']\n",
+      "\n",
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Experiments/application_1586279424915_0041_2/generation.3/kernel=2&pool=4&dropout=0.6836312810240766', {'kernel': 2, 'pool': 4, 'dropout': 0.6836312810240766}, {'accuracy': 0.34375, 'loss': 2.260488510131836, 'log': 'Experiments/application_1586279424915_0041_2/generation.3/kernel=2&pool=4&dropout=0.6836312810240766/output.log'})"
+     ]
+    }
+   ],
    "source": [
     "from hops import experiment\n",
-    "from hops import hdfs\n",
-    "\n",
-    "notebook = hdfs.project_path() + \"Jupyter/tf2/Parallel_Experiments/grid_search/grid_search_fashion_mnist.ipynb\"\n",
-    "experiment.grid_search(wrapper, args_dict, optimization_key='accuracy', direction='max')"
+    "search_dict = {'kernel': [2,8], 'pool': [2,8], 'dropout': [0.01, 0.99]}\n",
+    "# local_logdir starts the TensorBoard with a logdir on the local filesystem.\n",
+    "# when the job is finished the contents of the logdir will be put automatically in your project\n",
+    "experiment.differential_evolution(tf2_keras_differential_evolution, search_dict, name='tf2 keras mnist diff evo', local_logdir=True, optimization_key='accuracy')"
    ]
   },
   {
@@ -298,18 +249,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
-   "language": "",
-   "name": "pysparkkernel"
+   "display_name": "Python",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "python",
-    "version": 2
+    "name": "ipython",
+    "version": 3
    },
+   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "pyspark",
-   "pygments_lexer": "python2"
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
