training dataset path fixes
training dataset path fixes

pyspark kernel

--- a/notebooks/ml/End_To_End_Pipeline/tensorflow/model_repo_and_serving.ipynb
+++ b/notebooks/ml/End_To_End_Pipeline/tensorflow/model_repo_and_serving.ipynb
@@ -196,7 +196,7 @@
     "\n",
     "    print('Done exporting!')\n",
     "    \n",
-    "    metrics = metrics={'accuracy': score[1]}\n",
+    "    metrics = {'accuracy': score[1]}\n",
     "    \n",
     "    hops_model.export(export_path, \"mnist\", metrics=metrics)    \n",
     "    \n",
