--- a/notebooks/ml/Parallel_Experiments/TensorFlow/evolutionary_search/evolutionary_search_mnist.ipynb
+++ b/notebooks/ml/Parallel_Experiments/TensorFlow/evolutionary_search/evolutionary_search_mnist.ipynb
@@ -80,9 +80,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>26</td><td>application_1596813411095_0002</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1596813411095_0002/\">Link</a></td><td><a target=\"_blank\" href=\"http://hdptest3.north.sics.se:8042/node/containerlogs/container_e08_1596813411095_0002_01_000001/test__meb10000\">Link</a></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
    "source": [
     "def tf2_keras_differential_evolution(kernel, pool, dropout):\n",
     "\n",
@@ -98,25 +126,25 @@
     "    import pydoop.hdfs as pydoop\n",
     "    \n",
     "    data_dir = hdfs.project_path()\n",
-    "    train_filenames = pydoop.path.abspath(data_dir + \"TourData/mnist/train/df-mnist_train.tfrecord\")\n",
-    "    train_filenames = tf.io.gfile.glob(train_filenames + \"/part-r-*\")\n",
-    "    validation_filenames = pydoop.path.abspath(data_dir + \"TourData/mnist/train/df-mnist_train.tfrecord\")\n",
-    "    validation_filenames = tf.io.gfile.glob(validation_filenames + \"/part-r-*\")\n",
     "    \n",
-    "    \n",
-    "    epochs=30 \n",
+    "    epochs=1 \n",
     "    steps_per_epoch=5\n",
     "    validation_steps=2          \n",
-    "    \n",
     "    batch_size = 32\n",
     "    shuffle_size = batch_size * 4\n",
-    "    \n",
     "    num_classes = 10\n",
     "    \n",
     "    # Input image dimensions\n",
     "    img_rows, img_cols = 28, 28\n",
     "    input_shape = (img_rows, img_cols, 1)\n",
+    "    \n",
     "\n",
+    "    # Provide path to train and validation datasets\n",
+    "    train_filenames = [hdfs.project_path() + \"TourData/mnist/train/train.tfrecords\"]\n",
+    "    validation_filenames = [hdfs.project_path() + \"TourData/mnist/validation/validation.tfrecords\"]\n",
+    "    \n",
+    "    \n",
+    "    # Define input function\n",
     "    def input_fn(filenames, batch_size):\n",
     "      \n",
     "    \n",
@@ -125,11 +153,13 @@
     "            features = tf.io.parse_single_example(\n",
     "                serialized_example,\n",
     "                features={\n",
-    "                    'image_raw': tf.io.FixedLenFeature([img_rows * img_cols], tf.float32),                    \n",
+    "                    'image_raw': tf.io.FixedLenFeature([], tf.string),\n",
     "                    'label': tf.io.FixedLenFeature([], tf.int64),\n",
     "                })\n",
     "            \n",
-    "            image = features['image_raw']\n",
+    "            image = tf.io.decode_raw(features['image_raw'], tf.uint8)\n",
+    "            image.set_shape([img_rows * img_cols])\n",
+    "            \n",
     "            label = features['label']   \n",
     "                \n",
     "            return image, label\n",
@@ -143,10 +173,8 @@
     "\n",
     "      def _reshape_img(image, label):\n",
     "        image = tf.reshape(image, [28, 28, 1])\n",
-    "        # label = tf.one_hot(label, num_classes)\n",
     "        return image, label\n",
-    "        \n",
-    "        \n",
+    "                \n",
     "      # Import MNIST data\n",
     "      dataset = tf.data.TFRecordDataset(filenames)\n",
     "        \n",
@@ -205,29 +233,29 @@
     "    score = model.evaluate(input_fn(validation_filenames, batch_size), steps=1, verbose=0)\n",
     "    print('Test loss:', score[0])\n",
     "    print('Test accuracy:', score[1])\n",
-    "    return {'accuracy': score[1], 'loss': score[0]}    "
+    "    return {'accuracy': score[1], 'loss': score[0]}         "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 1 || average metric: 0.16666666666666666, best metric: 0.25, best parameter combination: ['kernel=3', 'pool=8', 'dropout=0.847924365583017']\n",
+      "Generation 1 || average metric: 0.3958333333333333, best metric: 0.6875, best parameter combination: ['kernel=4', 'pool=3', 'dropout=0.01']\n",
       "\n",
-      "Generation 2 || average metric: 0.20833333333333334, best metric: 0.25, best parameter combination: ['kernel=2', 'pool=4', 'dropout=0.4520528793170524']\n",
+      "Generation 2 || average metric: 0.4635416666666667, best metric: 0.6875, best parameter combination: ['kernel=4', 'pool=3', 'dropout=0.01']\n",
       "\n",
-      "Generation 3 || average metric: 0.22395833333333334, best metric: 0.34375, best parameter combination: ['kernel=2', 'pool=4', 'dropout=0.6836312810240766']\n",
+      "Generation 3 || average metric: 0.46875, best metric: 0.6875, best parameter combination: ['kernel=4', 'pool=3', 'dropout=0.01']\n",
       "\n",
-      "Generation 4 || average metric: 0.22395833333333334, best metric: 0.34375, best parameter combination: ['kernel=2', 'pool=4', 'dropout=0.6836312810240766']\n",
+      "Generation 4 || average metric: 0.484375, best metric: 0.6875, best parameter combination: ['kernel=4', 'pool=3', 'dropout=0.01']\n",
       "\n",
       "Finished Experiment \n",
       "\n",
-      "('hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Experiments/application_1586279424915_0041_2/generation.3/kernel=2&pool=4&dropout=0.6836312810240766', {'kernel': 2, 'pool': 4, 'dropout': 0.6836312810240766}, {'accuracy': 0.34375, 'loss': 2.260488510131836, 'log': 'Experiments/application_1586279424915_0041_2/generation.3/kernel=2&pool=4&dropout=0.6836312810240766/output.log'})"
+      "('hdfs://rpc.namenode.service.consul:8020/Projects/test/Experiments/application_1596813411095_0002_1/generation.1/kernel=4&pool=3&dropout=0.01', {'kernel': 4, 'pool': 3, 'dropout': 0.01}, {'accuracy': 0.6875, 'loss': 11.728448867797852, 'log': 'Experiments/application_1596813411095_0002_1/generation.1/kernel=4&pool=3&dropout=0.01/output.log'})"
      ]
     }
    ],
@@ -249,21 +277,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "PySpark",
    "language": "python",
-   "name": "python3"
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 3
    },
-   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "name": "pyspark",
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
