--- a/notebooks/ml/Parallel_Experiments/TensorFlow/grid_search/grid_search_fashion_mnist.ipynb
+++ b/notebooks/ml/Parallel_Experiments/TensorFlow/grid_search/grid_search_fashion_mnist.ipynb
@@ -101,9 +101,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>27</td><td>application_1596813411095_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://resourcemanager.service.consul:8088/proxy/application_1596813411095_0003/\">Link</a></td><td><a target=\"_blank\" href=\"http://hdptest4.north.sics.se:8042/node/containerlogs/container_e08_1596813411095_0003_01_000001/test__meb10000\">Link</a></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
    "source": [
     "def wrapper(learning_rate, dropout):\n",
     "\n",
@@ -117,21 +145,12 @@
     "    from hops import hdfs\n",
     "    \n",
     "    import pydoop.hdfs as pydoop\n",
-    "    \n",
-    "    data_dir = hdfs.project_path()\n",
-    "    train_filenames = pydoop.path.abspath(data_dir + \"TourData/mnist/train/df-mnist_train.tfrecord\")\n",
-    "    train_filenames = tf.io.gfile.glob(train_filenames + \"/part-r-*\")\n",
-    "    validation_filenames = pydoop.path.abspath(data_dir + \"TourData/mnist/train/df-mnist_train.tfrecord\")\n",
-    "    validation_filenames = tf.io.gfile.glob(validation_filenames + \"/part-r-*\")\n",
-    "    \n",
-    "    \n",
-    "    epochs=30 \n",
+    "\n",
+    "    epochs=2 \n",
     "    steps_per_epoch=5\n",
-    "    validation_steps=2          \n",
-    "    \n",
+    "    validation_steps=2              \n",
     "    batch_size = 32\n",
-    "    shuffle_size = batch_size * 4\n",
-    "    \n",
+    "    shuffle_size = batch_size * 4    \n",
     "    num_classes = 10\n",
     "    kernel = 3\n",
     "    pool = 2\n",
@@ -139,7 +158,13 @@
     "    # Input image dimensions\n",
     "    img_rows, img_cols = 28, 28\n",
     "    input_shape = (img_rows, img_cols, 1)\n",
+    "    \n",
+    "    # Provide path to train and validation datasets\n",
+    "    train_filenames = [hdfs.project_path() + \"TourData/mnist/train/train.tfrecords\"]\n",
+    "    validation_filenames = [hdfs.project_path() + \"TourData/mnist/validation/validation.tfrecords\"]\n",
+    "        \n",
     "\n",
+    "    # Define input function\n",
     "    def input_fn(filenames, batch_size):\n",
     "      \n",
     "    \n",
@@ -148,11 +173,13 @@
     "            features = tf.io.parse_single_example(\n",
     "                serialized_example,\n",
     "                features={\n",
-    "                    'image_raw': tf.io.FixedLenFeature([img_rows * img_cols], tf.float32),                    \n",
+    "                    'image_raw': tf.io.FixedLenFeature([], tf.string),\n",
     "                    'label': tf.io.FixedLenFeature([], tf.int64),\n",
     "                })\n",
     "            \n",
-    "            image = features['image_raw']\n",
+    "            image = tf.io.decode_raw(features['image_raw'], tf.uint8)\n",
+    "            image.set_shape([img_rows * img_cols])\n",
+    "            \n",
     "            label = features['label']   \n",
     "                \n",
     "            return image, label\n",
@@ -163,10 +190,10 @@
     "            image = tf.cast(image, tf.float32) / 255\n",
     "            label = tf.cast(label, tf.int32)        \n",
     "            return image, label\n",
+    "        \n",
     "\n",
     "      def _reshape_img(image, label):\n",
     "        image = tf.reshape(image, [28, 28, 1])\n",
-    "        # label = tf.one_hot(label, num_classes)\n",
     "        return image, label\n",
     "        \n",
     "        \n",
@@ -176,9 +203,6 @@
     "      # Map the parser over dataset, and batch results by up to batch_size\n",
     "      dataset = dataset.map(_parser, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
     "        \n",
-    "#      dataset = dataset.map(\n",
-    "#        _normalize_img, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
-    "\n",
     "        \n",
     "      dataset = dataset.map(\n",
     "        _reshape_img, num_parallel_calls=tf.data.experimental.AUTOTUNE)\n",
@@ -189,7 +213,6 @@
     "      dataset = dataset.batch(batch_size)   \n",
     "  \n",
     "      dataset = dataset.prefetch(tf.data.experimental.AUTOTUNE)\n",
-    "  #    dataset = strategy.experimental_distribute_dataset(dataset)         \n",
     "\n",
     "      return dataset\n",
     "    \n",
@@ -232,7 +255,7 @@
     "    score = model.evaluate(input_fn(validation_filenames, batch_size), steps=1, verbose=0)\n",
     "    print('Test loss:', score[0])\n",
     "    print('Test accuracy:', score[1])\n",
-    "    return {'accuracy': score[1], 'loss': score[0]}        "
+    "    return {'accuracy': score[1], 'loss': score[0]}   "
    ]
   },
   {
@@ -265,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -299,17 +322,17 @@
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 2
+    "version": 3
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "python2"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
