training dataset path fixes
training dataset path fixes

--- a/notebooks/ml/End_To_End_Pipeline/tensorflow/model_repo_and_serving.ipynb
+++ b/notebooks/ml/End_To_End_Pipeline/tensorflow/model_repo_and_serving.ipynb
@@ -196,7 +196,7 @@
     "\n",
     "    print('Done exporting!')\n",
     "    \n",
-    "    metrics = metrics={'accuracy': score[1]}\n",
+    "    metrics = {'accuracy': score[1]}\n",
     "    \n",
     "    hops_model.export(export_path, \"mnist\", metrics=metrics)    \n",
     "    \n",
@@ -491,18 +491,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pysparkkernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "python",
+    "name": "ipython",
     "version": 3
    },
+   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "pyspark",
-   "pygments_lexer": "python3"
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
